--- a/src/app/containers/home/home.component.html
+++ b/src/app/containers/home/home.component.html
@@ -13,27 +13,29 @@
     <ActionItem icon="res://navigation/menu" android:visibility="collapsed" (tap)="onDrawerButtonTap()"
         ios.position="left">
     </ActionItem>
-    <Label class="action-bar-title" [text]="'ngPolandConf ' + (confId$ | async)" fontSize="18"></Label>
+    <Label class="action-bar-title" [text]="'ngPolandConf ' + conference?.confYear"
+        [ngClass]="[themeApplied ? conference.confTheme.cssClassName : '']"></Label>
 </ActionBar>
-<ScrollView style="background-color: #FFFFFF;">
-    <GridLayout rows="auto, *" columns="*" style="height: 100%;" ios:style="padding-top: 60;">
+<ScrollView >
+    <GridLayout rows="auto, *" columns="*" style="height: 100%;" ios:style="padding-top: 60;" >
         <StackLayout *ngIf="!isLandscape" row="0" col="0" style="height: 120;width: 100%;" verticalAlignment="middle"
-            horizontalAlignment="center" ios:style="background-color: #FFFFFF;"
-            android:style="background-color: #3949ab;">
-            <Label text="Welcome to ngPoland Conference." style="font-size: 16;padding-left: 10;padding-right: 10;"
-                textWrap="true" textAlignment="center" android:style="color: #ffffff;" ios:style="color: #3949ab;">
+            horizontalAlignment="center" 
+            class="homeDescContainer" [ngClass]="[themeApplied ? conference.confTheme.cssClassName : '']">
+            <Label text="Welcome to ngPoland Conference." class="homeDesc"
+                [ngClass]="[themeApplied ? conference.confTheme.cssClassName : '']" textWrap="true"
+                textAlignment="center" android:style="color: #ffffff;" ios:style="color: #3949ab;">
             </Label>
             <Label text="The biggest Angular Conference in CEE."
-                style="font-size: 16;margin-top: 5;padding-left: 10;padding-right: 10;" textWrap="true"
+                [ngClass]="[themeApplied ? conference.confTheme.cssClassName : '']" class="homeDesc" textWrap="true"
                 textAlignment="center" android:style="color: #ffffff;" ios:style="color: #3949ab;">
             </Label>
         </StackLayout>
 
         <StackLayout *ngIf="isLandscape" row="0" col="0" style="height: 70;width: 100%;" verticalAlignment="middle"
-            horizontalAlignment="center" ios:style="background-color: #FFFFFF;"
-            android:style="background-color: #3949ab;">
+            horizontalAlignment="center" class="homeDescContainer"
+            [ngClass]="[themeApplied ? conference.confTheme.cssClassName : '']">
             <Label text="Welcome to ngPoland Conference, the biggest Angular Conference in CEE."
-                style="font-size: 16;padding-left: 10;padding-right: 10;" textWrap="true" textAlignment="center"
+                class="homeDesc" textWrap="true" textAlignment="center"
                 android:style="color: #ffffff;" ios:style="color: #3949ab;">
             </Label>
         </StackLayout>
@@ -41,61 +43,80 @@
         <GridLayout *ngIf="!isLandscape" row="1" col="0" rows="*, *, *" columns="*, *" style="height: 100%;">
             <StackLayout row="0" col="0" style="width: 100%;height: 100%">
                 <StackLayout #sl1 (tap)="onNavItemTap('/schedule', sl1)"
-                    style="background-color: #FFFFFF;height: 100%;width: 100%;" verticalAlignment="middle"
+                    class="homeItemContainer"
+                    [ngClass]="[themeApplied ? conference.confTheme.cssClassName : '']"
+                    verticalAlignment="middle"
                     horizontalAlignment="center">
-                    <Label text="&#xf017;" class="fa" style="color: #3949ab ;font-size: 50;margin-bottom: 10;"
-                        textAlignment="center"></Label>
-                    <Label text="Schedule" style="color: #ff1744;font-size: 14;" textAlignment="center"></Label>
+                    <Label text="&#xf017;" class="fa" 
+                        textAlignment="center"
+                        ></Label>
+                    <Label text="Schedule" textAlignment="center" class="homeItemLabel"></Label>
                 </StackLayout>
             </StackLayout>
 
             <StackLayout row="0" col="1" style="width: 100%;height: 100%">
                 <StackLayout #sl2 (tap)="onNavItemTap('/workshops', sl2)"
-                    style="background-color: #FFFFFF;height: 100%;width: 100%;" verticalAlignment="middle"
+                class="homeItemContainer"
+                [ngClass]="[themeApplied ? conference.confTheme.cssClassName : '']"
+                 verticalAlignment="middle"
                     horizontalAlignment="center">
-                    <Label text="&#xf11c;" class="fa" style="color: #3949ab ;font-size: 48;margin-bottom: 10;"
+                    <Label text="&#xf11c;" class="fa" style="font-size: 48;margin-bottom: 10;"
                         textAlignment="center"></Label>
-                    <Label text="Workshops" style="color: #ff1744;font-size: 14;" textAlignment="center"></Label>
+                    <Label text="Workshops" class="homeItemLabel" textAlignment="center"
+                        [ngClass]="[themeApplied ? conference.confTheme.cssClassName : '']"></Label>
                 </StackLayout>
             </StackLayout>
 
             <StackLayout row="1" col="0" style="width: 100%;height: 100%">
                 <StackLayout #sl3 (tap)="onNavItemTap('/ng-girls', sl3)"
-                    style="background-color: #FFFFFF;height: 100%;width: 100%;" verticalAlignment="middle"
+                class="homeItemContainer"
+                [ngClass]="[themeApplied ? conference.confTheme.cssClassName : '']"
+                 verticalAlignment="middle"
                     horizontalAlignment="center">
-                    <Label text="&#xf182;" class="fa" style="color: #3949ab ;font-size: 52;margin-bottom: 10;"
+                    <Label text="&#xf182;" class="fa" style="font-size: 52;margin-bottom: 10;"
                         textAlignment="center"></Label>
-                    <Label text="ngGirls" style="color: #ff1744;font-size: 14;" textAlignment="center"></Label>
+                    <Label text="ngGirls" class="homeItemLabel" textAlignment="center"
+                        [ngClass]="[themeApplied ? conference.confTheme.cssClassName : '']"></Label>
                 </StackLayout>
             </StackLayout>
 
             <StackLayout row="1" col="1" style="width: 100%;height: 100%">
                 <StackLayout #sl4 (tap)="onNavItemTap('/speakers', sl4)"
-                    style="background-color: #FFFFFF;height: 100%;width: 100%;" verticalAlignment="middle"
+                class="homeItemContainer"
+                [ngClass]="[themeApplied ? conference.confTheme.cssClassName : '']"
+                 verticalAlignment="middle"
                     horizontalAlignment="center">
-                    <Label text="&#xf0c0;" class="fa" style="color: #3949ab ;font-size: 48;margin-bottom: 10;"
+                    <Label text="&#xf0c0;" class="fa" style="margin-bottom: 10;"
                         textAlignment="center"></Label>
-                    <Label text="Speakers" style="color: #ff1744;font-size: 14;" textAlignment="center"></Label>
+                    <Label text="Speakers" class="homeItemLabel" textAlignment="center"
+                        [ngClass]="[themeApplied ? conference.confTheme.cssClassName : '']"></Label>
                 </StackLayout>
             </StackLayout>
 
             <StackLayout row="2" col="0" style="width: 100%;height: 100%">
                 <StackLayout #sl5 (tap)="onNavItemTap('/info', sl5)"
-                    style="background-color: #FFFFFF;height: 100%;width: 100%;" verticalAlignment="middle"
+                class="homeItemContainer"
+                [ngClass]="[themeApplied ? conference.confTheme.cssClassName : '']"
+                 verticalAlignment="middle"
                     horizontalAlignment="center">
-                    <Label text="&#xf05a;" class="fa" style="color: #3949ab ;font-size: 50;margin-bottom: 10;"
+                    <Label text="&#xf05a;" class="fa" style="margin-bottom: 10;"
                         textAlignment="center"></Label>
-                    <Label text="Info" style="color: #ff1744;font-size: 14;" textAlignment="center"></Label>
+                    <Label text="Info" class="homeItemLabel" textAlignment="center"
+                        [ngClass]="[themeApplied ? conference.confTheme.cssClassName : '']"></Label>
                 </StackLayout>
             </StackLayout>
 
             <StackLayout row="2" col="1" style="width: 100%;height: 100%">
                 <StackLayout #sl6 (tap)="onNavItemTap('/about', sl6)"
-                    style="background-color: #FFFFFF;height: 100%;width: 100%;" verticalAlignment="middle"
+                class="homeItemContainer"
+                [ngClass]="[themeApplied ? conference.confTheme.cssClassName : '']"
+                 verticalAlignment="middle"
                     horizontalAlignment="center">
-                    <Label text="&#xf121;" class="fa" style="color: #3949ab ;font-size: 48;margin-bottom: 10;"
+                    <Label text="&#xf121;" class="fa" 
+                    style="font-size: 48;margin-bottom: 10;"
                         textAlignment="center"></Label>
-                    <Label text="About" style="color: #ff1744;font-size: 14;" textAlignment="center"></Label>
+                    <Label text="About" class="homeItemLabel" textAlignment="center"
+                        [ngClass]="[themeApplied ? conference.confTheme.cssClassName : '']"></Label>
                 </StackLayout>
             </StackLayout>
         </GridLayout>
@@ -103,66 +124,84 @@
         <GridLayout *ngIf="isLandscape" row="1" col="0" rows="*, *" columns="*, *, *" style="height: 100%;">
             <StackLayout row="0" col="0" style="width: 100%;height: 100%">
                 <StackLayout #sl1 (tap)="onNavItemTap('/schedule', sl1)"
-                    style="background-color: #FFFFFF;height: 100%;width: 100%;" verticalAlignment="middle"
+                class="homeItemContainer"
+                [ngClass]="[themeApplied ? conference.confTheme.cssClassName : '']"
+                 verticalAlignment="middle"
                     horizontalAlignment="center" orientation="horizontal">
-                    <Label text="&#xf017;" class="fa" style="color: #3949ab ;font-size: 34;margin-right: 10;"
+                    <Label text="&#xf017;" class="fa" style="font-size: 34;margin-right: 10;"
                         textAlignment="center" verticalAlignment="middle"></Label>
-                    <Label text="Schedule" style="color: #ff1744;font-size: 13;" textAlignment="center"
+                    <Label text="Schedule" class="homeItemLabel"
+                        [ngClass]="[themeApplied ? conference.confTheme.cssClassName : '']" textAlignment="center"
                         verticalAlignment="middle"></Label>
                 </StackLayout>
             </StackLayout>
 
             <StackLayout row="0" col="1" style="width: 100%;height: 100%">
                 <StackLayout #sl2 (tap)="onNavItemTap('/workshops', sl2)"
-                    style="background-color: #FFFFFF;height: 100%;width: 100%;" verticalAlignment="middle"
+                class="homeItemContainer"
+                [ngClass]="[themeApplied ? conference.confTheme.cssClassName : '']"
+                 verticalAlignment="middle"
                     horizontalAlignment="center" orientation="horizontal">
-                    <Label text="&#xf11c;" class="fa" style="color: #3949ab ;font-size: 34;margin-right: 10;"
+                    <Label text="&#xf11c;" class="fa" style="font-size: 34;margin-right: 10;"
                         textAlignment="center" verticalAlignment="middle"></Label>
-                    <Label text="Workshops" style="color: #ff1744;font-size: 14;" textAlignment="center"
+                    <Label text="Workshops" class="homeItemLabel" textAlignment="center"
+                        [ngClass]="[themeApplied ? conference.confTheme.cssClassName : '']"
                         verticalAlignment="middle"></Label>
                 </StackLayout>
             </StackLayout>
 
             <StackLayout row="0" col="2" style="width: 100%;height: 100%">
                 <StackLayout #sl3 (tap)="onNavItemTap('/ng-girls', sl3)"
-                    style="background-color: #FFFFFF;height: 100%;width: 100%;" verticalAlignment="middle"
+                class="homeItemContainer"
+                [ngClass]="[themeApplied ? conference.confTheme.cssClassName : '']"
+                 verticalAlignment="middle"
                     horizontalAlignment="center" orientation="horizontal">
-                    <Label text="&#xf182;" class="fa" style="color: #3949ab ;font-size: 34;margin-right: 10;"
+                    <Label text="&#xf182;" class="fa" style="font-size: 34;margin-right: 10;"
                         textAlignment="center" verticalAlignment="middle"></Label>
-                    <Label text="ngGirls" style="color: #ff1744;font-size: 14;" textAlignment="center"
+                    <Label text="ngGirls" class="homeItemLabel" textAlignment="center"
+                        [ngClass]="[themeApplied ? conference.confTheme.cssClassName : '']"
                         verticalAlignment="middle"></Label>
                 </StackLayout>
             </StackLayout>
 
             <StackLayout row="1" col="0" style="width: 100%;height: 100%">
                 <StackLayout #sl4 (tap)="onNavItemTap('/speakers', sl4)"
-                    style="background-color: #FFFFFF;height: 100%;width: 100%;" verticalAlignment="middle"
+                class="homeItemContainer"
+                [ngClass]="[themeApplied ? conference.confTheme.cssClassName : '']"
+                 verticalAlignment="middle"
                     horizontalAlignment="center" orientation="horizontal">
-                    <Label text="&#xf0c0;" class="fa" style="color: #3949ab ;font-size: 34;margin-right: 10;"
+                    <Label text="&#xf0c0;" class="fa" style="font-size: 34;margin-right: 10;"
                         textAlignment="center" verticalAlignment="middle"></Label>
-                    <Label text="Speakers" style="color: #ff1744;font-size: 14;" textAlignment="center"
+                    <Label text="Speakers" class="homeItemLabel" textAlignment="center"
+                        [ngClass]="[themeApplied ? conference.confTheme.cssClassName : '']"
                         verticalAlignment="middle"></Label>
                 </StackLayout>
             </StackLayout>
 
             <StackLayout row="1" col="1" style="width: 100%;height: 100%">
                 <StackLayout #sl5 (tap)="onNavItemTap('/info', sl5)"
-                    style="background-color: #FFFFFF;height: 100%;width: 100%;" verticalAlignment="middle"
+                class="homeItemContainer"
+                [ngClass]="[themeApplied ? conference.confTheme.cssClassName : '']"
+                 verticalAlignment="middle"
                     horizontalAlignment="center" orientation="horizontal">
-                    <Label text="&#xf05a;" class="fa" style="color: #3949ab ;font-size: 34;margin-right: 10;"
+                    <Label text="&#xf05a;" class="fa" style="font-size: 34;margin-right: 10;"
                         textAlignment="center" verticalAlignment="middle"></Label>
-                    <Label text="Info" style="color: #ff1744;font-size: 14;" textAlignment="center"
+                    <Label text="Info" class="homeItemLabel" textAlignment="center"
+                        [ngClass]="[themeApplied ? conference.confTheme.cssClassName : '']"
                         verticalAlignment="middle"></Label>
                 </StackLayout>
             </StackLayout>
 
             <StackLayout row="1" col="2" style="width: 100%;height: 100%">
                 <StackLayout #sl6 (tap)="onNavItemTap('/about', sl6)"
-                    style="background-color: #FFFFFF;height: 100%;width: 100%;" verticalAlignment="middle"
+                class="homeItemContainer"
+                [ngClass]="[themeApplied ? conference.confTheme.cssClassName : '']"
+                 verticalAlignment="middle"
                     horizontalAlignment="center" orientation="horizontal">
-                    <Label text="&#xf121;" class="fa" style="color: #3949ab ;font-size: 34;margin-right: 10;"
+                    <Label text="&#xf121;" class="fa" style="font-size: 34;margin-right: 10;"
                         textAlignment="center" verticalAlignment="middle"></Label>
-                    <Label text="About" style="color: #ff1744;font-size: 14;" textAlignment="center"
+                    <Label text="About" class="homeItemLabel" textAlignment="center"
+                        [ngClass]="[themeApplied ? conference.confTheme.cssClassName : '']"
                         verticalAlignment="middle"></Label>
                 </StackLayout>
             </StackLayout>
