--- a/src/app/containers/workshops/components/workshop/workshop.component.html
+++ b/src/app/containers/workshops/components/workshop/workshop.component.html
@@ -1,53 +1,16 @@
 <StackLayout style="padding: 10 5;">
-  <StackLayout class="cardStyle2">
-    <GridLayout
-      columns="70, *"
-      rows="auto, 30, auto, 15"
-      width="auto"
-      height="auto"
-      width="100%"
-      backgroundColor="#ffffff"
-      horizontalAlignment="center"
-      verticalAlignment="center"
-      style="padding: 10 20;"
-      textAlignment="left"
-    >
-      <label
-        [text]="workshop.title"
-        fontWeight="bold"
-        fontSize="16"
-        verticalAlignment="center"
-        textAlignment="left"
-        textWrap="true"
-        col="1"
-        row="0"
-        style="color: #ff1744;"
-      ></label>
-      <label
-        [text]="workshop.instructor.name"
-        col="1"
-        row="1"
-        verticalAlignment="center"
-        textAlignment="left"
-        style="color: #3949ab;"
-        (tap)="showModal()"
-      ></label>
+  <StackLayout class="workshopCardStyle">
+    <GridLayout columns="70, *" rows="auto, 30, auto, 15" width="auto" height="auto" width="100%"
+       horizontalAlignment="center" verticalAlignment="center" style="padding: 10 20;"
+      textAlignment="left">
+      <label [text]="workshop.title" class="workshopTitle" verticalAlignment="center" textAlignment="left"
+        textWrap="true" col="1" row="0" style="color: #ff1744;"></label>
+      <label [text]="workshop.instructor.name" col="1" row="1" verticalAlignment="center" textAlignment="left"
+      class="workshopInstructorName"  (tap)="showModal()"></label>
 
-      <NSImg
-        row="0"
-        col="0"
-        rowSpan="2"
-        roundAsCircle="true"
-        width="50"
-        height="auto"
-        stretch="aspectFit"
-        horizontalAlignment="center"
-        verticalAlignment="center"
-        style="margin-right: 15;"
-        [src]="workshop.instructor.photo.getImageUrl()"
-        placeholderImageUri="res://person"
-        (tap)="showModal()"
-      >
+      <NSImg row="0" col="0" rowSpan="2" roundAsCircle="true" width="50" height="auto" stretch="aspectFit"
+        horizontalAlignment="center" verticalAlignment="center" style="margin-right: 15;"
+        [src]="workshop.instructor.photo.getImageUrl()" placeholderImageUri="res://person" (tap)="showModal()">
       </NSImg>
 
       <!-- <image
@@ -67,18 +30,8 @@
       >
       </image> -->
 
-      <label
-        [text]="workshop.description"
-        textWrap="true"
-        textAlignment="left"
-        verticalAlignment="center"
-        fontSize="14"
-        col="0"
-        row="2"
-        colSpan="2"
-        style="color: #3C4043;padding-top: 15;"
-        horlizontalAlignmet="left"
-      ></label>
+      <label [text]="workshop.description" textWrap="true" textAlignment="left" verticalAlignment="center" class="workshopDescLabel"
+        col="0" row="2" colSpan="2" horlizontalAlignmet="left"></label>
     </GridLayout>
   </StackLayout>
 </StackLayout>
