--- a/src/app/containers/workshops/workshops.component.html
+++ b/src/app/containers/workshops/workshops.component.html
@@ -15,13 +15,13 @@
 	<Label class="action-bar-title" text="Workshops" style="font-size: 16;"></Label>
 </ActionBar>
 
-<GridLayout class="page page-content">
-	<StackLayout>
-		<StackLayout *ngIf="workshops$ | async as workshops; else nocontent">
+<GridLayout class="page page-content workshopsList" [ngClass]="[themeApplied ? conference.confTheme.cssClassName : '']">
+	<StackLayout >
+		<StackLayout *ngIf="workshops$ | async as workshops; else nocontent" >
 			<PullToRefresh [refreshing]="isLoading$ | async" (refresh)="refreshData($event)">
 				<ListView class="list-group" [items]="workshops" style="height: 100%;" separatorColor="#ff1744">
 					<ng-template let-workshop="item">
-						<Workshop [workshop]="workshop"></Workshop>
+						<Workshop [workshop]="workshop" ></Workshop>
 					</ng-template>
 				</ListView>
 			</PullToRefresh>
