--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -68,4 +68,5 @@ http://docs.telerik.com/devtools/nativescript-ui/Controls/NativeScript/SideDrawe
         </ScrollView>
     </GridLayout>
     <page-router-outlet tkMainContent class="page page-content"></page-router-outlet>
+    <!-- <router-outlet></router-outlet> -->
 </RadSideDrawer>
