--- a/src/_app-common.scss
+++ b/src/_app-common.scss
@@ -16,7 +16,7 @@ ActionBar.action-bar {
 }
 
 .action-bar-title {
-  font-size: 18;
+  font-size: 16;
 }
 
 .sidedrawer {
@@ -54,22 +54,10 @@ ActionBar.action-bar {
   }
 }
 
-@keyframes fade {
-  0% {
-    opacity: 0.7;
-  }
-  25% {
-    opacity: 0.4;
-  }
-  100% {
-    opacity: 0.7;
-  }
-}
-
 .workshopCardStyle {
   color: #3c4043;
   .workshopTitle {
-    font-weight: bold; 
+    font-weight: bold;
     font-size: 16;
   }
   .workshopInstructorName {
@@ -105,12 +93,12 @@ $terminator-lighter-background-color: #242743;
           color: $terminator-primary-font-color;
           text-transform: uppercase;
           font-family: "Terminator";
-          font-size: 11;
+          font-size: 10;
           letter-spacing: 0.15;
 
           &.fa {
             font-family: "FontAwesome";
-            font-size: 13;
+            font-size: 14;
             color: $terminator-red-color;
             opacity: 0.7;
           }
@@ -133,7 +121,10 @@ $terminator-lighter-background-color: #242743;
     }
   }
   &.action-bar-title {
-    font-size: 14;
+    font-family: "Roboto";
+text-transform: none;
+letter-spacing: 0;
+font-size: 16;
   }
   &.homeDescContainer {
     background-color: $terminator-background-color;
@@ -155,7 +146,6 @@ $terminator-lighter-background-color: #242743;
       color: $terminator-red-color;
       opacity: 0.7;
       font-size: 50;
-      animation: fade 5s;
     }
 
     .homeItemLabel {
@@ -172,23 +162,22 @@ $terminator-lighter-background-color: #242743;
   .workshopCardStyle {
     color: $terminator-primary-font-color;
     .workshopTitle {
-        font-size: 13;
-        text-transform: uppercase;
-        letter-spacing: 0.15;
-        opacity: 0.7;
-      }
-      .workshopInstructorName {
-        color: $terminator-primary-font-color;
-        font-family: $basic-font-family;
-        
-      }
+      font-size: 13;
+      text-transform: uppercase;
+      letter-spacing: 0.15;
+      opacity: 0.7;
+    }
+    .workshopInstructorName {
+      color: $terminator-primary-font-color;
+      font-family: $basic-font-family;
+    }
     .workshopDescLabel {
-        font-family: $basic-font-family;
-        color: $terminator-primary-font-color;
-        padding-top: 15;
-        font-size: 14;
-        opacity: 0.8
-      }
+      font-family: $basic-font-family;
+      color: $terminator-primary-font-color;
+      padding-top: 15;
+      font-size: 14;
+      opacity: 0.8;
+    }
   }
 }
 // Common page class
