--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,14 +3,15 @@ RadSideDrawer is a UI component part of the Progress NativeScript UI set of comp
 Learn more about the RadSideDrawer UI component and how it can be customized in this documentation article:
 http://docs.telerik.com/devtools/nativescript-ui/Controls/NativeScript/SideDrawer/getting-started
 -->
-<RadSideDrawer [drawerTransition]="sideDrawerTransition" >
-    <GridLayout tkDrawerContent rows="auto, *" class="sidedrawer sidedrawer-left"  [ngClass]="[themeApplied ? conference.confTheme.cssClassName : '']">
+<RadSideDrawer [drawerTransition]="sideDrawerTransition">
+    <GridLayout tkDrawerContent rows="auto, *" class="sidedrawer sidedrawer-left"
+        [ngClass]="[themeApplied ? conference.confTheme.cssClassName : '']">
         <StackLayout row="0" class="sidedrawer-header" style="background-color: white;margin-top: 20;">
             <Image src="res://logong"></Image>
         </StackLayout>
 
         <ScrollView row="1">
-            <StackLayout class="sidedrawer-content" >
+            <StackLayout class="sidedrawer-content">
                 <GridLayout columns="auto, *" class="sidedrawer-list-item"
                     [class.selected]="isComponentSelected('/home')" (tap)="onNavItemTap('/home')">
                     <Label col="0" text="&#xf58e;" class="fa" style="margin-left: 10;text-align: center;"></Label>
@@ -55,15 +56,18 @@ http://docs.telerik.com/devtools/nativescript-ui/Controls/NativeScript/SideDrawe
                     <Label col="1" text="About" class="p-r-10"></Label>
                 </GridLayout>
                 <StackLayout class="hr-light"></StackLayout>
-                <GridLayout columns="auto,4*" class="sidedrawer-list-item" >
-                        <Label col="1" text="Apply theme" textAlignment="left" ></Label>
-                        <Switch color="#3949ab" col="0" [checked]="themeApplied$ | async"
-                            (checkedChange)="onCheckedChange($event)" textAlignment="center" style="margin-left: 10;"></Switch>
+                <GridLayout rows="auto, *" columns="*" class="sidedrawer-list-item" style="margin-top: 10">
+                    <Switch #switch color="#3949ab" col="0" row="0" [checked]="themeApplied$ | async"
+                        (checkedChange)="onCheckedChange($event)" horizontalAlignment="center" style="margin-right: 10;"></Switch>
+
+                    <Label col="0" row="1" [text]="
+              switch.checked ? 'Hasta la vista, baby...' : 'Don\'t even try...'
+            " horizontalAlignment="center" style="margin-right: 10;margin-top: 5;"></Label>
                 </GridLayout>
-                <GridLayout columns="*" rows="*, *" textAlignment="center" style="padding-top: 20;">
+                <!-- <GridLayout  columns="*" rows="*, *" textAlignment="center" style="padding-top: 20;">
                         <Button col="0" row="1" [text]="confId$ | async" (tap)="onChangeYear()" class="btn btn-primary" style="font-size: 18;"></Button>
                         <Label  col="0" row="0" text="Current year:" textAlignment="center"></Label>
-            </GridLayout>
+            </GridLayout> -->
             </StackLayout>
         </ScrollView>
     </GridLayout>
