gifs, ripple, splash screen

--- a/src/app/containers/schedule/components/event-item/event-item.component.html
+++ b/src/app/containers/schedule/components/event-item/event-item.component.html
@@ -86,7 +86,7 @@
           style="color: #5F6368;font-size: 12;"
           verticalAlignment="center"
           textAlignment="left"
-          (tap)="showModal()"
+          ripple (tap)="showModal()"
         ></label>
       </GridLayout>
     </StackLayout>
