--- a/src/app/containers/speakers/components/speaker/speaker.component.html
+++ b/src/app/containers/speakers/components/speaker/speaker.component.html
@@ -1,4 +1,4 @@
-<StackLayout style="padding: 10 5;" #sl (tap)="showModal(sl)">
+<StackLayout style="padding: 10 5;" #sl ripple (tap)="showModal(sl)">
   <StackLayout class="cardStyle2" style="margin: 5;">
     <GridLayout rows="auto, *" columns="100, *" style="padding: 5 5;">
       <StackLayout row="0" col="0" rowSpan="2">
