--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,11 +3,11 @@ RadSideDrawer is a UI component part of the Progress NativeScript UI set of comp
 Learn more about the RadSideDrawer UI component and how it can be customized in this documentation article:
 http://docs.telerik.com/devtools/nativescript-ui/Controls/NativeScript/SideDrawer/getting-started
 -->
-<RadSideDrawer [drawerTransition]="sideDrawerTransition">
-    <GridLayout tkDrawerContent rows="auto, *" class="sidedrawer sidedrawer-left"
-        [ngClass]="[themeApplied ? conference.confTheme.cssClassName : '']">
-        <StackLayout row="0" class="sidedrawer-header" style="background-color: white;margin-top: 20;">
-            <Image src="res://logong"></Image>
+<RadSideDrawer [drawerTransition]="sideDrawerTransition" >
+    <GridLayout tkDrawerContent rows="190, *" class="sidedrawer sidedrawer-left" 
+        [ngClass]="[themeApplied ? conference.confTheme.cssClassName : '']" >
+        <StackLayout row="0" class="sidedrawer-header" style="margin-top: 10;">
+            <NSImg [src]="themeApplied ? 'res://terminator_sidebar_header' : 'res://logong'" height="180" autoPlayAnimations="true" stretch="aspectFit"></NSImg>
         </StackLayout>
 
         <ScrollView row="1">
@@ -62,7 +62,7 @@ http://docs.telerik.com/devtools/nativescript-ui/Controls/NativeScript/SideDrawe
 
                     <Label col="0" row="1" [text]="
               switch.checked ? 'Hasta la vista, baby...' : 'Don\'t even try...'
-            " horizontalAlignment="center" style="margin-right: 10;margin-top: 5;"></Label>
+            " horizontalAlignment="center" style="margin-right: 10;margin-top: 10;height: 100%;"></Label>
                 </GridLayout>
                 <!-- <GridLayout  columns="*" rows="*, *" textAlignment="center" style="padding-top: 20;">
                         <Button col="0" row="1" [text]="confId$ | async" (tap)="onChangeYear()" class="btn btn-primary" style="font-size: 18;"></Button>
