--- a/src/app/containers/home/home.component.html
+++ b/src/app/containers/home/home.component.html
@@ -42,7 +42,7 @@
 
         <GridLayout *ngIf="!isLandscape" row="1" col="0" rows="*, *, *" columns="*, *" style="height: 100%;">
             <StackLayout row="0" col="0" style="width: 100%;height: 100%">
-                <StackLayout #sl1 (tap)="onNavItemTap('/schedule', sl1)"
+                <StackLayout #sl1 ripple (tap)="onNavItemTap('/schedule', sl1)"
                     class="homeItemContainer"
                     [ngClass]="[themeApplied ? conference.confTheme.cssClassName : '']"
                     verticalAlignment="middle"
@@ -55,7 +55,7 @@
             </StackLayout>
 
             <StackLayout row="0" col="1" style="width: 100%;height: 100%">
-                <StackLayout #sl2 (tap)="onNavItemTap('/workshops', sl2)"
+                <StackLayout #sl2 ripple (tap)="onNavItemTap('/workshops', sl2)"
                 class="homeItemContainer"
                 [ngClass]="[themeApplied ? conference.confTheme.cssClassName : '']"
                  verticalAlignment="middle"
@@ -81,7 +81,7 @@
             </StackLayout>
 
             <StackLayout row="1" col="1" style="width: 100%;height: 100%">
-                <StackLayout #sl4 (tap)="onNavItemTap('/speakers', sl4)"
+                <StackLayout #sl4 ripple (tap)="onNavItemTap('/speakers', sl4)"
                 class="homeItemContainer"
                 [ngClass]="[themeApplied ? conference.confTheme.cssClassName : '']"
                  verticalAlignment="middle"
@@ -94,7 +94,7 @@
             </StackLayout>
 
             <StackLayout row="2" col="0" style="width: 100%;height: 100%">
-                <StackLayout #sl5 (tap)="onNavItemTap('/info', sl5)"
+                <StackLayout #sl5 ripple (tap)="onNavItemTap('/info', sl5)"
                 class="homeItemContainer"
                 [ngClass]="[themeApplied ? conference.confTheme.cssClassName : '']"
                  verticalAlignment="middle"
@@ -107,7 +107,7 @@
             </StackLayout>
 
             <StackLayout row="2" col="1" style="width: 100%;height: 100%">
-                <StackLayout #sl6 (tap)="onNavItemTap('/about', sl6)"
+                <StackLayout #sl6 ripple (tap)="onNavItemTap('/about', sl6)"
                 class="homeItemContainer"
                 [ngClass]="[themeApplied ? conference.confTheme.cssClassName : '']"
                  verticalAlignment="middle"
@@ -123,7 +123,7 @@
 
         <GridLayout *ngIf="isLandscape" row="1" col="0" rows="*, *" columns="*, *, *" style="height: 100%;">
             <StackLayout row="0" col="0" style="width: 100%;height: 100%">
-                <StackLayout #sl1 (tap)="onNavItemTap('/schedule', sl1)"
+                <StackLayout #sl1 ripple (tap)="onNavItemTap('/schedule', sl1)"
                 class="homeItemContainer"
                 [ngClass]="[themeApplied ? conference.confTheme.cssClassName : '']"
                  verticalAlignment="middle"
@@ -137,7 +137,7 @@
             </StackLayout>
 
             <StackLayout row="0" col="1" style="width: 100%;height: 100%">
-                <StackLayout #sl2 (tap)="onNavItemTap('/workshops', sl2)"
+                <StackLayout #sl2 ripple (tap)="onNavItemTap('/workshops', sl2)"
                 class="homeItemContainer"
                 [ngClass]="[themeApplied ? conference.confTheme.cssClassName : '']"
                  verticalAlignment="middle"
@@ -151,7 +151,7 @@
             </StackLayout>
 
             <StackLayout row="0" col="2" style="width: 100%;height: 100%">
-                <StackLayout #sl3 (tap)="onNavItemTap('/ng-girls', sl3)"
+                <StackLayout #sl3 ripple (tap)="onNavItemTap('/ng-girls', sl3)"
                 class="homeItemContainer"
                 [ngClass]="[themeApplied ? conference.confTheme.cssClassName : '']"
                  verticalAlignment="middle"
@@ -165,7 +165,7 @@
             </StackLayout>
 
             <StackLayout row="1" col="0" style="width: 100%;height: 100%">
-                <StackLayout #sl4 (tap)="onNavItemTap('/speakers', sl4)"
+                <StackLayout #sl4 ripple (tap)="onNavItemTap('/speakers', sl4)"
                 class="homeItemContainer"
                 [ngClass]="[themeApplied ? conference.confTheme.cssClassName : '']"
                  verticalAlignment="middle"
@@ -179,7 +179,7 @@
             </StackLayout>
 
             <StackLayout row="1" col="1" style="width: 100%;height: 100%">
-                <StackLayout #sl5 (tap)="onNavItemTap('/info', sl5)"
+                <StackLayout #sl5 ripple (tap)="onNavItemTap('/info', sl5)"
                 class="homeItemContainer"
                 [ngClass]="[themeApplied ? conference.confTheme.cssClassName : '']"
                  verticalAlignment="middle"
@@ -193,7 +193,7 @@
             </StackLayout>
 
             <StackLayout row="1" col="2" style="width: 100%;height: 100%">
-                <StackLayout #sl6 (tap)="onNavItemTap('/about', sl6)"
+                <StackLayout #sl6 ripple (tap)="onNavItemTap('/about', sl6)"
                 class="homeItemContainer"
                 [ngClass]="[themeApplied ? conference.confTheme.cssClassName : '']"
                  verticalAlignment="middle"
