--- a/src/app/containers/workshops/components/workshop/workshop.component.html
+++ b/src/app/containers/workshops/components/workshop/workshop.component.html
@@ -6,7 +6,7 @@
       <label [text]="workshop.title" class="workshopTitle" verticalAlignment="center" textAlignment="left"
         textWrap="true" col="1" row="0" style="color: #ff1744;"></label>
       <label [text]="workshop.instructor.name" col="1" row="1" verticalAlignment="center" textAlignment="left"
-      class="workshopInstructorName"  (tap)="showModal()"></label>
+      class="workshopInstructorName" ripple (tap)="showModal()"></label>
 
       <NSImg row="0" col="0" rowSpan="2" roundAsCircle="true" width="50" height="auto" stretch="aspectFit"
         horizontalAlignment="center" verticalAlignment="center" style="margin-right: 15;"
