--- a/src/app/shared/components/speaker-details/speaker-details.component.html
+++ b/src/app/shared/components/speaker-details/speaker-details.component.html
@@ -1,22 +1,22 @@
-<GridLayout columns="*" rows="auto, *">
-    <GridLayout col="0" row="0" columns="2*, 6*, 2*" rows="auto" style="margin-top: 30; margin-bottom: 15;">
+<GridLayout columns="*" rows="auto, *" class="speakerDetail" [ngClass]="[themeApplied ? conference.confTheme.cssClassName : '']">
+    <GridLayout col="0" row="0" columns="2*, 6*, 2*" rows="auto" class="speakerDetailActionBar" >
         <Button col="0" row="0" text="&#xf060;" ripple (tap)="close()" class="my-btn fa"
             style="font-size: 20; border-width: 0; width: 70;" textAlignment="center"
             verticalAlignment="center"></Button>
 
         <Label col="1" row="0" [text]="speaker.name" fontWeight="bold" fontSize="24" verticalAlignment="center"
-            textAlignment="center" textWrap="true" style="color: #ff1744;"></Label>
+            textAlignment="center" textWrap="true" class="title"></Label>
     </GridLayout>
 
-    <ScrollView col="0" row="1" orientation="vertical">
-        <StackLayout class="page page-content" style="padding-top: 20;">
+
+    <ScrollView col="0" row="1" orientation="vertical" >
+        <StackLayout class="page page-content speakerDetailContent" >
             <GridLayout col="0" row="1" class="content-padding" columns="*" rows="auto, auto, auto">
                 <NSImg col="0" row="0" [src]="speaker.photo.getImageUrl()" placeholderImageUri="res://person"
                     style="height: 200;margin-top: 10; margin-bottom: 10;" stretch="aspectFit"></NSImg>
-                <Label col="0" row="1" [text]="speaker.role" textWrap="true" textAlignment="center" fontWeight="bold"
-                    fontSize="15" style="color: #000000;margin-top: 10; margin-bottom: 10;"></Label>
+                <Label col="0" row="1" [text]="speaker.role" textWrap="true" textAlignment="center" class="speakerDetailTitle"></Label>
                 <Label col="0" row="2" [text]="speaker.bio" textWrap="true" textAlignment="left" fontSize="14"
-                    style="color: #000000;margin-top: 10; margin-bottom: 10;"></Label>
+                    class="speakerDetailDescription"></Label>
             </GridLayout>
         </StackLayout>
     </ScrollView>
